# docs/swagger.yaml
@@ -75,7 +75,7 @@ definitions:
         type: number
       duration:
         minimum: 0
-        type: integer
+        type: number
       elevation_gain:
         minimum: 0
         type: number
@@ -137,7 +137,7 @@ definitions:
       distance:
         type: number
       duration:
-        type: integer
+        type: number
       elevation_gain:
         type: number
       elevation_loss:
@@ -181,7 +181,7 @@ definitions:
         type: number
       duration:
         minimum: 0
-        type: integer
+        type: number
       elevation_gain:
         minimum: 0
         type: number
@@ -504,6 +504,34 @@ paths:
         in: path
         name: user_id
         required: true
+        type: string
+      - description: Keyword to search in route names
+        in: query
+        name: keyword
+        type: string
+      - description: Minimum distance filter
+        in: query
+        name: min_distance
+        type: string
+      - description: Maximum distance filter
+        in: query
+        name: max_distance
+        type: string
+      - description: Minimum elevation gain filter
+        in: query
+        name: min_elevation
+        type: string
+      - description: Maximum elevation gain filter
+        in: query
+        name: max_elevation
+        type: string
+      - description: Visibility filter
+        in: query
+        name: visibility
+        type: string
+      - description: Author filter
+        in: query
+        name: author
         type: string
       produces:
       - application/json
